# blend-formula-rs

./: Cargo.toml  README.md
blend-formula-proc-macro/: Cargo.toml
blend-formula-proc-macro/src/: formula_map.in  lib.rs
src/: formula_map.in  lib.rs
