[package]
name = "blend-formula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blend-formula-proc-macro = { version = "=0.1.0", path = "blend-formula-proc-macro" }
wgpu = { version = "0.17", optional = true }

[features]
wgpu = ["dep:wgpu"]