[package]
name = "blend-formula"
description = "macros for defining GPU blend modes from arbitrary formulae"
authors = ["Yokin"]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["macros", "wgpu", "utility"]
categories = ["graphics","mathematics"]

[dependencies]
blend-formula-proc-macro = { version = "=0.1.0", path = "blend-formula-proc-macro" }
wgpu = { version = "0.17", optional = true }

[features]
wgpu = ["dep:wgpu"]