[package]
name = "blend-formula-proc-macro"
description = "macros for blend-formula crate"
repository = "https://github.com/Yokinman/blend-formula-rs"
authors = ["Yokin"]
version = "0.1.2"
edition = "2021"
license = "MIT"
keywords = []
categories = []

[lib]
proc_macro = true

[dependencies]
#trace = { git = "https://github.com/Yokinman/trace-rs.git" }
